Implemented search with ElasticSearch
